--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,9 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Welcome to #{title}, your personal finance management tool.
+  p Use this tool to calculate and track your net worth easily.
+  p
+    a(href='/users') Get Started
+  p
+    img(src='/images/finance.jpg', alt='Finance Image')
