Logs - added the financial data schema - Added UserID object - Changed get started text to Login and Register links

--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,8 @@ block content
   p Welcome to #{title}, your personal finance management tool.
   p Use this tool to calculate and track your net worth easily.
   p
-    a(href='/users') Get Started
+    a(href='/login') Login
+  p
+    a(href='/register') Register
   p
     img(src='/images/finance.jpg', alt='Finance Image')
